--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
 
 <h1>Hello world!</h1>
-<div><img src="1-m.png" alt="No1 Logo"
-style="width:100%;max-width:960px"></div>
+<div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:500px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
+<div><img src="JTC2.png" alt="Table cloth" style="width:100%;max-width:700px"></div>
 
 </body>
 </html>
