Add a H1 tag regarding review the learning process of git

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works.</p>
 <div><img src="JTC2.png" alt="Table cloth" style="width:100%;max-width:700px"></div>
+<h1>This is a review of which I've got learn yesterday</h1>
 
 </body>
 </html>
