Add a new colored line

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <div><img src="1-m.png" alt="Hello World from Space" style="width:100%;max-width:500px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works.</p>
+<p style="color: red;">PUSH and PULL and working with GitHub</p>
 <div><img src="JTC2.png" alt="Table cloth" style="width:100%;max-width:700px"></div>
 <h1>This is a review of which I've got learn yesterday</h1>
 
