Update index.html adding a line into index.html using GitHub editor

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <p style="color: red;">PUSH and PULL and working with GitHub</p>
 <div><img src="JTC2.png" alt="Table cloth" style="width:100%;max-width:700px"></div>
 <h1>This is a review of which I've got learn yesterday</h1>
+<p>WORKING ON GITHUB TO ADD THIS LINE</p>
 
 </body>
 </html>
