--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <p>This line is here to show how merging works.</p>
 <p style="color: red;">PUSH and PULL and working with GitHub</p>
 <div><img src="JTC2.png" alt="Table cloth" style="width:100%;max-width:700px"></div>
-<h1>This is a review of which I've got learn yesterday</h1>
+<h1>This is a review of what I've got learnt yesterday</h1>
 <p>WORKING ON GITHUB TO ADD THIS LINE</p>
+<p>Repeating the PROCCESS</p>  
 
 </body>
 </html>
