--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <div><img src="JTC2.png" alt="Table cloth" style="width:100%;max-width:700px"></div>
 <h1>This is a review of what I've got learnt yesterday</h1>
 <p>WORKING ON GITHUB TO ADD THIS LINE</p>
-<p>Repeating the last PROCCESS</p>  
+<p>Repeating the last PROCCESS</p>
+<p style="color: #024902;">3d day of git</p>  
 
 </body>
 </html>
