--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <p>This line is here to show how merging works.</p>
 <p style="color: red;">PUSH and PULL and working with GitHub</p>
 <div><img src="JTC2.png" alt="Table cloth" style="width:100%;max-width:700px"></div>
-<h1>This is a review of what I've got learnt yesterday</h1>
+<h1>This is a review of what I learned yesterday</h1>
 <p>WORKING ON GITHUB TO ADD THIS LINE</p>
 <p>Repeating the last PROCCESS</p>
-<p style="color: #024902;">3d day of git</p>  
+<p style="color: #024902;">Third day of git</p>  
 
 </body>
 </html>
